# MAB-Agent

./: .env.example  README.md  modelwatch.config.example.json  pyproject.toml
modelwatch/: __init__.py  __main__.py  coerce.py  config.py  connectors.py  digest.py  emailer.py  extractor.py  http.py  judge.py  models.py  normalize.py  pipeline.py  rag.py  scoring.py  store.py
tests/: test_config.py  test_connectors.py  test_core.py  test_emailer.py  test_extractor.py  test_judge.py  test_rag.py
